# ai-factory

./: .env.example  .factory-code-worker-last-message.txt  .gitignore  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: ai-factory-architecture.md  devin-software-factory.md  factory-control-plane-spec.md  lightsail-production-runbook.md  production-reliability-plan.md  software-factory-plan.md
schemas/: automation-state.schema.json  common.schema.json  eval-manifest.schema.json  eval-report.schema.json  feedback-report.schema.json  golden-dataset.schema.json  latency-baseline.schema.json  linear-trigger-state.schema.json  linear-webhook-envelope.schema.json  merge-decision.schema.json  monitoring-report.schema.json  policy-decision.schema.json  pr-packet.schema.json  promotion-decision.schema.json  prompt-contract.schema.json  relevance-policy.schema.json  security-review.schema.json  spec-packet.schema.json  ticket-bundle.schema.json  tool-schema.schema.json  work-item.schema.json
scripts/: validate_contracts.py
tests/: test_automation.py  test_build_review.py  test_cli.py  test_connectors.py  test_contracts.py  test_controller.py  test_eval_common.py  test_eval_execution.py  test_feedback_synthesis.py  test_intake.py  test_integration.py  test_linear_trigger.py  test_linear_workflow.py  test_merge_orchestration.py  test_policy.py  test_production_monitoring.py  test_production_runtime.py  test_release_staging.py  test_relevance_policy.py  test_reliability.py  test_scheduler.py  test_security_review.py  test_ticketing.py  test_vertical_slice.py
(+124 files in other folders)
